kubernetes/ks3/config/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: ks3
  name: ks3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ks3
  template:
    metadata:
      labels:
        app: ks3
    spec:
      containers:
      - image: registry.codinghere.com/smoloney/ks-frontend:v3
        name: ks3-frontend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: frontend
            mountPath: /app/src
            readOnly: true
      - image: registry.codinghere.com/smoloney/ks-backend:v3
        name: ks3-backend
        imagePullPolicy: Always
        command: ["python"]
        args: ["-m", "flask", "run"]
        ports:
        - containerPort: 5000
      imagePullSecrets:
        - name: harbor-registry
      volumes:
      - name: frontend
        emptyDir: {}
