kubernetes/ks3/config/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ks3
  name: ks3
spec:
  selector:
    app: ks3
  ports:
  - name: http
    port: 80
    targetPort: 3000
  - name: api
    port: 8080
    targetPort: 5000
