kubernetes/ks3/config/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: ks3
  name: ks3
spec:
  rules:
  - host: ks3.185.80.184.161.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: ks3
          servicePort: http
      - path: /api/hello
        backend:
          serviceName: ks3
          servicePort: api
